--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: pip install smtplib
+      run: pip install python-jobspy
 
     - name: Send email
       env:
