--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python - <<EOF
         import smtplib
+        import os
         from email.mime.text import MIMEText
         from email.mime.multipart import MIMEMultipart
 
