--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -28,6 +28,7 @@ jobs:
         python - <<EOF
         import smtplib
         import os
+        import ssl
         from email.mime.text import MIMEText
         from email.mime.multipart import MIMEMultipart
 
