--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -63,9 +63,14 @@ jobs:
         message.attach(part2)
 
         # Create secure connection with server and send email
-        context = ssl.create_default_context()
-        with smtplib.SMTP_SSL("smtp.gmail.com", 465, context=context) as server:
+        with smtplib.SMTP('smtp.gmail.com', 587) as server:
+            # Enable security
+            server.starttls()
+            
+            # Login to the server
             server.login(sender_email, password)
+            
+            # Send email
             server.sendmail(
                 sender_email, receiver_email, message.as_string()
             )
