--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Send email
       env:
-        GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
+        BREVO: ${{ secrets.BREVO }}
       run: |
         python - <<EOF
         import smtplib
@@ -33,8 +33,9 @@ jobs:
         from email.mime.multipart import MIMEMultipart
 
         sender_email = "bot.martrenchar@gmail.com"
+        identifier = "831031001@smtp-brevo.com"
         receiver_email = "paul.martrenchar@gmail.com"
-        password = os.environ.get('GMAIL_PASSWORD')
+        password = os.environ.get('BREVO')
 
         message = MIMEMultipart("alternative")
         message["Subject"] = "GitHub Actions Email"
@@ -63,12 +64,12 @@ jobs:
         message.attach(part2)
 
         # Create secure connection with server and send email
-        with smtplib.SMTP('smtp.gmail.com', 587) as server:
+        with smtplib.SMTP('smtp-relay.brevo.com', 587) as server:
             # Enable security
             server.starttls()
             
             # Login to the server
-            server.login(sender_email, password)
+            server.login(identifier, password)
             
             # Send email
             server.sendmail(
