fix issue on secret

--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -24,5 +24,6 @@ jobs:
     - name: Send email
       env:
         BREVO: ${{ secrets.BREVO }}
+        HF: ${{ secrets.HF }}
       run: |
         python app.py
