Filter out the old offers Put on a schedule

--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -1,9 +1,10 @@
 name: Send Email
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    # Runs at 15:00 UTC every day (adjust time as needed)
+    - cron: '0 8 * * *'
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
   send-email:
