--- a/.github/workflows/send-teaching-email.yml
+++ b/.github/workflows/send-teaching-email.yml
@@ -1,13 +1,13 @@
-name: Send Email
+name: Send Teaching Email
 
 on:
   schedule:
     # Runs at 15:00 UTC every day (adjust time as needed)
-    - cron: '0 8 * * *'
+    - cron: '30 7 * * *'
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
-  send-email:
+  send-teaching-email:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,6 +31,5 @@ jobs:
         EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
         MISTRAL_KEY: ${{ secrets.MISTRAL_KEY }}
       run: |
-        python app.py
-   
+        python app_teaching.py        
     
